# bg-removal

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml  requirements.txt  tasks_and_commands.md
.github/actions/setup-python/: action.yml
.github/workflows/: audit.yml  build.yml  ci-cd.yml  ci.yml  deploy.yml  lint.yml  security.yml  test.yml
app/: main.py
app/utils/: queue_utils.py  utils.py
apps/api/: .dockerignore  Dockerfile  pyproject.toml
apps/api/src/: main.py
apps/api/src/api/: routes.py
apps/api/src/core/: celery_app.py  config.py  redis.py
apps/api/src/models/: schemas.py
apps/api/src/services/: background_removal.py
apps/api/tests/: test_api.py
apps/web/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts  wrangler.toml
apps/web/src/: App.tsx
apps/web/src/components/: ImagePreview.tsx  ImageUploader.tsx  ProcessingStatus.tsx
apps/web/src/lib/: api.ts
apps/web/src/pages/: Home.tsx
docker/: .env.example  docker-compose.prod.yml  docker-compose.yml
docker/nginx/: default.conf
docs/: README.md
scripts/: audit_code_quality.sh  audit_performance.sh  audit_scalability.sh  audit_security.sh  generate_test_images.py  run_all_audits.sh  test_images.py
tests/: test_api.py
worker/: .dockerignore  Dockerfile  pyproject.toml
worker/src/: worker.py
worker/src/tasks/: remove_bg.py  resize.py
worker/tests/: test_remove_bg.py
