[project]
name = "bg-removal-worker"
version = "1.0.0"
description = "Celery worker for background removal"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.4.0",
    "redis>=5.1.0",
    "rembg[cpu]>=2.0.75",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
